[gd_scene load_steps=2 format=3 uid="uid://bchdch4f1tcym"]

[ext_resource type="Script" uid="uid://b44aq3vstkx50" path="res://scripts/ui/PauseMenu.gd" id="1_ubb4e"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_ubb4e")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Save Game"

[node name="NewGameButton" type="Button" parent="PanelContainer/VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "Start New Game (Wipe Save)"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"
